--- a/index.html
+++ b/index.html
@@ -2,9 +2,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeu De Plateau</title>
+
+    <!-- Ajout RESET -->
+    <link rel="stylesheet" href="css/reset_helha.css" />
+
+    <!-- Ajout mon style -->
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Ajout Police -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav id="nav-menu">
+            <ul>
+                <li><a href="#presentation">Présentation</a></li>
+                <li><a href="#mecaniques">Mécaniques</a></li>
+                <img src="img/logo.png" alt="logo">
+                <li><a href="#personnages">Personnages</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="presentation">
+
+    </section>
+
+    <section id="mecaniques">
+
+    </section>
+
+    <section id="personnages">
+
+    </section>
     
+    <section id="contact">
+
+    </section>
+
+    <footer></footer>
 </body>
 </html>
