Page Contact & Sections (pb navbar)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav id="nav-menu">
@@ -23,7 +24,7 @@
                 <li><a href="#mecaniques">Mécaniques</a></li>
                 <img src="img/logo.png" alt="logo">
                 <li><a href="#personnages">Personnages</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -40,10 +41,6 @@
 
     </section>
     
-    <section id="contact">
-
-    </section>
-
     <footer></footer>
 </body>
 </html>
