html de la page contact

--- a/contact.html
+++ b/contact.html
@@ -31,21 +31,41 @@
     </header>
 
     <section id="presentation">
-
+        <h1>Rencontrez les créateurs du jeu.</h1>
+        <p>Ce jeu a été créé par une équipe de 5 élèves en tant que projet de Game et Level Design pour l'option 3D temps réel de la HELHA.</p>
     </section>
 
     <section id="art">
-
+        <h2>Les élèves de l'option art</h2>
+        <div class="eleve">
+            <img src="" alt="Lola">
+            <p>Création de personnages et évenements.</p>
+        </div>
+        <div class="eleve">
+            <img src="" alt="Florine">
+            <p>Création de props et colorisation.</p>
+        </div>
+        <div class="eleve">
+            <img src="" alt="Mathieu">
+            <p>Création de cartes et plateau.</p>
+        </div>
     </section>
 
     <section id="prog">
-
+        <h2>Les élèves de l'option programmation</h2>
+        <div class="eleve">
+            <img src="" alt="Ugo">
+            <p>Création de concepts et Game Design.</p>
+        </div>
+        <div class="eleve">
+            <img src="" alt="Ludovic">
+            <p>Création Game et Level Design.</p>
+        </div>
     </section>
     
     <section id="formulaire">
-
+        <a href="#" class="cta-button">Inscrivez-vous</a>
     </section>
-
 
     <footer></footer>    
 </body>
