css page contact

--- a/contact.html
+++ b/contact.html
@@ -31,42 +31,45 @@
     </header>
 
     <section id="presentation">
-        <h1>Rencontrez les créateurs du jeu.</h1>
+        <h1>Rencontrez les créateurs du jeu</h1>
         <p>Ce jeu a été créé par une équipe de 5 élèves en tant que projet de Game et Level Design pour l'option 3D temps réel de la HELHA.</p>
     </section>
 
-    <section id="art">
+    <section id="art" class="container">
         <h2>Les élèves de l'option art</h2>
-        <div class="eleve">
-            <img src="" alt="Lola">
+        <div class="eleve1">
+            <img src="img/lola.png" alt="Lola">
             <p>Création de personnages et évenements.</p>
-        </div>
-        <div class="eleve">
-            <img src="" alt="Florine">
+            <img src="img/florine.png" alt="Florine">
             <p>Création de props et colorisation.</p>
         </div>
-        <div class="eleve">
-            <img src="" alt="Mathieu">
+        <div class="eleve2">
+            <img src="img/mathieu.png" alt="Mathieu">
             <p>Création de cartes et plateau.</p>
         </div>
     </section>
 
-    <section id="prog">
-        <h2>Les élèves de l'option programmation</h2>
-        <div class="eleve">
-            <img src="" alt="Ugo">
+    <section id="prog" class="container">
+        <h3>Les élèves de l'option programmation</h3>
+        <div class="eleve3">
+            <img src="img/ugo.png" alt="Ugo">
             <p>Création de concepts et Game Design.</p>
-        </div>
-        <div class="eleve">
-            <img src="" alt="Ludovic">
+            <img src="img/ludovic.png" alt="Ludovic">
             <p>Création Game et Level Design.</p>
         </div>
     </section>
     
-    <section id="formulaire">
-        <a href="#" class="cta-button">Inscrivez-vous</a>
+    <section id="formulaire" class="container">
+        <form action="" method="post">
+            <input placeholder = "Votre adresse email" type="email" name="email" id="email" required>
+            <button type="submit">Inscrivez-vous</button>
+        </form>
     </section>
 
-    <footer></footer>    
+    <footer class="container"> 
+        <img src="img/instagram.png" alt="instagram">
+        <img src="img/pinterest.png" alt="pinterest">
+        <img src="img/twitter.png" alt="twitter">
+    </footer>    
 </body>
 </html>
