--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <section id="presentation" class="container">
 
-        <h1>TITRE DU JEU</h1> <!--changement de police ?-->
+        <h1>DEVOTION ET DAMNATION</h1> <!--changement de police ?-->
 
-        <p id="catchPresentation">"Entrez dans le monde fantastique de quatre adolscents maudits..."</p>
+        <p id="catchPresentation">"Entrez dans le monde fantastique de quatre adolescents maudits..."</p>
 
         <div class="video">
             <iframe
@@ -107,10 +107,42 @@
 
     </section>
 
-    <section id="personnages">
+    <section id="personnages" class="container">
+        <div id="persos">
+            <div>
+                <img src="img/nick.png" alt="Nick">
+                <p>Nick</p>
+            </div>
 
+          <div>
+            <img src="img/henri.png" alt="Henri">
+            <p>Henri</p>
+          </div>
+
+          <div>
+            <img src="img/cassie.png" alt="Cassie">
+            <p>Cassie</p>
+          </div>
+
+          <div>
+            <img src="img/britanny.png" alt="Britanny"> 
+            <p>Britanny</p>
+          </div>
+        </div>
+        <div id="texte">
+            <p>Le groupe devra travailler ensemble pour sortir vivant du château hanté. Attirer le fantôme, échanger leurs objets et essences et garder un oeil sur leur entourage, il faut faire preuve d’entraide pour survivre.</p>
+        </div>
     </section>
+
+    <section class="container">
+        <a href="" class="button">Achetez</a>
+    </section>
+
     
-    <footer></footer>
+    <footer class="container"> 
+        <img src="img/instagram.png" alt="instagram">
+        <img src="img/pinterest.png" alt="pinterest">
+        <img src="img/twitter.png" alt="twitter">
+    </footer>    
 </body>
 </html>
