--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="mecaniques" class="container">
 
         <div id="armure">
-            <img src="https://i.pinimg.com/564x/92/2f/d4/922fd4e8714a27e8e7f1545c5e949bb9.jpg" alt="ImageArmure">
+            <img src="img/chevalier.png" alt="ImageArmure">
             <p>Dans les années 1900, un évènement tragique eu lieu. Un homme d’une quarantaine d’année (?) réalisa de nombreux meurtres dans le chateau.
 
                 Pour punition, il se retrouve enfermé dans une armure du chateau et hante ses couloirs...</p>
