--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="#presentation">Présentation</a></li>
                 <img src="img/logo.png" alt="logo">
-                <li><a href="#art">Art</a></li>
-                <li><a href="#prog">Prog</a></li>
+                <li><a href="#art">Artistes</a></li>
+                <li><a href="#prog">Programmeurs</a></li>
             </ul>
         </nav>
     </header>
