changement d'image et de texte

--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,13 @@
     <section id="art" class="container">
         <h2>Les élèves de l'option art</h2>
         <div class="eleve1">
-            <img src="img/lola.png" alt="Lola">
+            <img src="img/lola.jpg" alt="Lola">
             <p>Création de personnages et évenements.</p>
             <img src="img/florine.png" alt="Florine">
             <p>Création de props et colorisation.</p>
         </div>
         <div class="eleve2">
-            <img src="img/mathieu.png" alt="Mathieu">
+            <img src="img/mathieu.jpg" alt="Mathieu">
             <p>Création de cartes et plateau.</p>
         </div>
     </section>
@@ -52,7 +52,7 @@
     <section id="prog" class="container">
         <h3>Les élèves de l'option programmation</h3>
         <div class="eleve3">
-            <img src="img/ugo.png" alt="Ugo">
+            <img src="img/ugo.jpg" alt="Ugo">
             <p>Création de concepts et Game Design.</p>
             <img src="img/ludovic.png" alt="Ludovic">
             <p>Création Game et Level Design.</p>
