--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
 <body>
     <header>
+        <!-- Bouton menu burger-->
+        <button class="menu-bouton" onclick="toggleMenu()">
+            <i class="fa-solid fa-ghost"></i>
+        </button>
+
+        
         <nav id="nav-menu">
             <ul>
                 <li><a href="#presentation">Présentation</a></li>
@@ -151,6 +157,9 @@
         <img src="img/instagram.png" alt="instagram">
         <img src="img/pinterest.png" alt="pinterest">
         <img src="img/twitter.png" alt="twitter">
-    </footer>    
+    </footer>
+    
+     <!--Javascript-->
+     <script src="js/app.js"></script>
 </body>
 </html>
