titres des sections + footer

--- a/contact.html
+++ b/contact.html
@@ -31,12 +31,16 @@
     </header>
 
     <section id="presentation">
+
         <h1>Rencontrez les créateurs du jeu</h1>
+
         <p>Ce jeu a été créé par une équipe de 5 élèves en tant que projet de Game et Level Design pour l'option 3D temps réel de la HELHA.</p>
     </section>
 
     <section id="art" class="container">
+
         <h2>Les élèves de l'option art</h2>
+
         <div class="eleve1">
             <img src="img/lola.jpg" alt="Lola">
             <p>Création de personnages et évenements.</p>
@@ -50,7 +54,9 @@
     </section>
 
     <section id="prog" class="container">
+
         <h3>Les élèves de l'option programmation</h3>
+
         <div class="eleve3">
             <img src="img/ugo.jpg" alt="Ugo">
             <p>Création de concepts et Game Design.</p>
@@ -60,13 +66,16 @@
     </section>
     
     <section id="formulaire" class="container">
+
+        <h4>Inscrivez-vous pour recevoir des nouvelles sur ce jeu</h4>
+        
         <form action="" method="post">
             <input placeholder = "Votre adresse email" type="email" name="email" id="email" required>
             <button type="submit">Inscrivez-vous</button>
         </form>
     </section>
 
-    <footer class="container"> 
+    <footer> 
         <img src="img/instagram.png" alt="instagram">
         <img src="img/pinterest.png" alt="pinterest">
         <img src="img/twitter.png" alt="twitter">
