--- a/index.html
+++ b/index.html
@@ -67,12 +67,16 @@
 
     <section id="mecaniques" class="container">
 
+        <h2>L'armure hantée</h2>
+
         <div id="armure">
             <img src="img/chevalier.png" alt="ImageArmure">
             <p>
                 Il y a des centaines d’années, un chevalier trouve une hache maudite et se fait corrompre petit à petit par celle-ci, jusqu’à ce que ses compagnons l’achèvent avec sa propre hache. Il hante maintenant les murs de ce château, et veut se venger de quiconque rentre dans son hall.  
             </p>
         </div>
+
+        <h3>Les cartes</h3>
 
         <div id="cartes">
             <img src="img/cartes_event.png" alt="ImageCartes">
@@ -92,6 +96,8 @@
             </div>
                 
         </div>
+
+        <h3>Mécaniques du plateau</h3>
 
         <div id="plateau">
             <!--Images dans le css pour l'utilisation du hover-->
@@ -122,6 +128,8 @@
     </section>
 
     <section id="personnages" class="container">
+
+        <h4>Les personnages</h4>
         <div id="persos">
             <div>
                 <img src="img/nick.png" alt="Nick">
@@ -153,7 +161,7 @@
     </section>
 
     
-    <footer class="container"> 
+    <footer> 
         <img src="img/instagram.png" alt="instagram">
         <img src="img/pinterest.png" alt="pinterest">
         <img src="img/twitter.png" alt="twitter">
