media queries page contact

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         <div class="eleve1">
             <img src="img/lola.jpg" alt="Lola">
             <p>Création de personnages et évenements.</p>
-            <img src="img/florine.png" alt="Florine">
+            <img src="img/florine.jpg" alt="Florine">
             <p>Création de props et colorisation.</p>
         </div>
         <div class="eleve2">
