--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!-- Ajout mon style -->
     <link rel="stylesheet" href="css/style.css" />
 
+
+    <!-- Ajout du cdn de FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Ajout Police -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -160,6 +164,9 @@
         <a href="" class="button">Achetez</a>
     </section>
 
+    <section id="fantome">
+        <img src="img/ghost.png" alt="">
+    </section>
     
     <footer> 
         <img src="img/instagram.png" alt="instagram">
