--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Ajout Police -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
@@ -23,12 +30,12 @@
 <body>
     <header>
         <!-- Bouton menu burger-->
-        <button class="menu-bouton" onclick="toggleMenu()">
+        <button class="menu-btn" onclick="toggleMenu()">
             <i class="fa-solid fa-ghost"></i>
         </button>
 
         
-        <nav id="nav-menu">
+        <nav id="nav-menu" onclick="closeMenu()">
             <ul>
                 <li><a href="#presentation">Présentation</a></li>
                 <li><a href="#mecaniques">Mécaniques</a></li>
