animation contact + commentaires

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,8 @@
        <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-
-
 </head>
+
 <body>
     <header>
 
@@ -35,7 +34,7 @@
         
         <nav id="nav-menu" onclick="closeMenu()">
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li> <!-- Ramène vers la page d'accueil -->
                 <li><a href="#presentation">Présentation</a></li>
                 <img src="img/logo.png" alt="logo">
                 <li><a href="#art">Artistes</a></li>
@@ -83,10 +82,16 @@
 
         <h4>Inscrivez-vous pour recevoir des nouvelles sur ce jeu</h4>
         
+        <!-- Bouton de Newsletter -->
+
         <form action="" method="post">
             <input placeholder = "Votre adresse email" type="email" name="email" id="email" required>
             <button type="submit">Inscrivez-vous</button>
         </form>
+    </section>
+
+    <section id="fantome">
+        <img src="img/ghost.png" alt=""> <!-- Icone de FontAwesome -->
     </section>
 
     <footer> 
