commentaires + adaptation texte

--- a/contact.html
+++ b/contact.html
@@ -56,13 +56,16 @@
 
         <div class="eleve1">
             <img src="img/lola.jpg" alt="Lola">
-            <p>Création de personnages et évenements.</p>
+            <p>Lola<br>
+            Création de personnages et évenements.</p>
             <img src="img/florine.jpg" alt="Florine">
-            <p>Création de props et colorisation.</p>
+            <p>Florine<br>
+            Création de props et colorisation.</p>
         </div>
         <div class="eleve2">
             <img src="img/mathieu.jpg" alt="Mathieu">
-            <p>Création de cartes et plateau.</p>
+            <p>Mathieu<br>
+            Création de cartes et plateau.</p>
         </div>
     </section>
 
@@ -72,9 +75,11 @@
 
         <div class="eleve3">
             <img src="img/ugo.jpg" alt="Ugo">
-            <p>Création de concepts et Game Design.</p>
+            <p>Ugo<br>
+            Création de concepts et Game Design.</p>
             <img src="img/ludovic.png" alt="Ludovic">
-            <p>Création Game et Level Design.</p>
+            <p>Ludovic<br>
+            Création Game et Level Design.</p>
         </div>
     </section>
     
@@ -91,7 +96,7 @@
     </section>
 
     <section id="fantome">
-        <img src="img/ghost.png" alt=""> <!-- Icone de FontAwesome -->
+        <img src="img/ghost.png" alt="fantôme"> <!-- Icone de FontAwesome -->
     </section>
 
     <footer> 
