--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#mecaniques">Mécaniques</a></li>
                 <img src="img/logo.png" alt="logo">
                 <li><a href="#personnages">Personnages</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li> <!-- Ramène vers la page de contact -->
             </ul>
         </nav>
     </header>
@@ -81,7 +81,7 @@
         <h2>L'armure hantée</h2>
 
         <div id="armure">
-            <img src="img/chevalier.png" alt="ImageArmure">
+            <img src="img/chevalier.png" alt="Armure">
             <p>
                 Il y a des centaines d’années, un chevalier trouve une hache maudite et se fait corrompre petit à petit par celle-ci, jusqu’à ce que ses compagnons l’achèvent avec sa propre hache. Il hante maintenant les murs de ce château, et veut se venger de quiconque rentre dans son hall.  
             </p>
@@ -90,22 +90,17 @@
         <h3>Les cartes</h3>
 
         <div id="cartes">
-            <img src="img/cartes_event.png" alt="ImageCartes">
-            <div>              
-                <p>Cartes Objets : </p>
-                <p>Objets à “construire” et à amener dans le hall pour lever le maléfice</p>
-            </div>
-
-            <div>               
-                 <p>Cartes Évènements : </p>
-                 <p>Bonus et Malus qui vont interférer dans la partie des joueurs</p>
-            </div>
-
-            <div>
-                <p>Cartes Essences : </p>
-                <p>Cartes collectables afin de constuire les objets</p>
-            </div>
-                
+            <img src="img/cartes_event.png" alt="Cartes">    
+                <p>
+                Cartes Objets :<br> 
+                Objets à “construire” et à amener dans le hall pour lever le maléfice<br> 
+                --------------------------------<br>
+                Cartes Évènements :<br> 
+                Bonus et Malus qui vont interférer dans la partie des joueurs<br>
+                --------------------------------<br>
+                Cartes Essences :<br> 
+                Cartes collectables afin de constuire les objets<br>
+                </p>      
         </div>
 
         <h3>Mécaniques du plateau</h3>
@@ -171,6 +166,7 @@
         <a href="" class="button">Achetez</a>
     </section>
 
+    <!-- Icone d'animation -->
     <section id="fantome">
         <img src="img/ghost.png" alt="">
     </section>
