--- a/index.html
+++ b/index.html
@@ -90,17 +90,30 @@
         <h3>Les cartes</h3>
 
         <div id="cartes">
-            <img src="img/cartes_event.png" alt="Cartes">    
+            <div>   
+                    <img src="img/cartes_event.png" alt="Cartes">
                 <p>
-                Cartes Objets :<br> 
-                Objets à “construire” et à amener dans le hall pour lever le maléfice<br> 
-                --------------------------------<br>
+                    Cartes Objets :<br> 
+                    Objets à “construire” et à amener dans le hall pour lever le maléfice<br> 
+                </p> 
+            </div>
+     
+            <div>        
+                    <img src="img/event_stack.jpg" alt="Event">  
+                <p>
                 Cartes Évènements :<br> 
-                Bonus et Malus qui vont interférer dans la partie des joueurs<br>
-                --------------------------------<br>
-                Cartes Essences :<br> 
-                Cartes collectables afin de constuire les objets<br>
-                </p>      
+                Bonus et Malus qui vont interférer dans la partie des joueurs<br> 
+               </p>
+            </div>
+
+            <div>        
+                    <img src="img/cartes_event.png" alt="Cartes"> 
+                <p>
+                    Cartes Essences :<br> 
+                    Cartes collectables afin de constuire les objets<br>
+                </p> 
+             </div>
+    
         </div>
 
         <h3>Mécaniques du plateau</h3>
