modifications chrome,, img & media queries

--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,11 @@
         </nav>
     </header>
 
-    <section id="presentation">
-
+    <section id="presentation" class="container">
         <h1>Rencontrez les créateurs du jeu</h1>
 
         <p>Ce jeu a été créé par une équipe de 5 élèves en tant que projet de Game et Level Design pour l'option 3D temps réel de la HELHA.</p>
+        <hr>
     </section>
 
     <section id="art" class="container">
@@ -84,6 +84,7 @@
     </section>
     
     <section id="formulaire" class="container">
+        <hr>
 
         <h4>Inscrivez-vous pour recevoir des nouvelles sur ce jeu</h4>
         
