--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
         <div id="cartes">
             <div>   
-                    <img src="img/cartes_event.png" alt="Cartes">
+                    <img src="img/cartes_objets.jpg" alt="Cartes">
                 <p>
-                    Cartes Objets :<br> 
+                    <strong>Cartes Objets :</strong><br> 
                     Objets à “construire” et à amener dans le hall pour lever le maléfice<br> 
                 </p> 
             </div>
@@ -101,15 +101,15 @@
             <div>        
                     <img src="img/event_stack.jpg" alt="Event">  
                 <p>
-                Cartes Évènements :<br> 
+                <strong>Cartes Évènements </strong>:<br> 
                 Bonus et Malus qui vont interférer dans la partie des joueurs<br> 
                </p>
             </div>
 
             <div>        
-                    <img src="img/cartes_event.png" alt="Cartes"> 
+                    <img src="img/cartes_essences.jpg" alt="Cartes"> 
                 <p>
-                    Cartes Essences :<br> 
+                    <strong>Cartes Essences :</strong><br> 
                     Cartes collectables afin de constuire les objets<br>
                 </p> 
              </div>
@@ -124,6 +124,12 @@
                 <div class="img-lumiere"></div>
                 <div class="img-valve"></div>
                 <div class="img-benediction" ></div>
+            </div>
+
+            <div id="plateau-images-mobile">
+                <div class="img-lumiere-2"></div>
+                <div class="img-valve-2"></div>
+                <div class="img-benediction-2" ></div>
             </div>
 
             <div id="plateau-textes">
