changement mécaniques plateau

--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
 
             <div id="plateau-textes">
                 <div>
-                    <p>Fonctionnement de la lumière et du générateur</p>  
+                    <p>Fonctionnement du poêlon qui permet d'allumer ou éteindre la lumière</p>  
                 </div>
 
                 <div>
-                    <p>Utilisation de la valve et du levier</p>              
+                    <p>Les fantômes bloquent certaines salles en fonction de la lumière</p>              
                 </div>
                 
                 <div>
-                    <p>Salle de Bénédictions</p>         
+                    <p>Les trappes permettent de traverser un passage secret</p>         
                 </div>
                 
             </div>
