--- a/index.html
+++ b/index.html
@@ -52,17 +52,8 @@
 
         <p id="catchPresentation">"Entrez dans le monde fantastique de quatre adolescents maudits..."</p>
 
-        <div class="video">
-            <iframe
-                width="1851"
-                height="779"
-                src="https://www.youtube.com/embed/N025CbAIAt8"
-                title="Wakfu Opening 1 ~ HD"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen>
-            </iframe>
+        <div class="video" >
+            <video controls preload="auto" src="/video/Dévotion et Damnation Trailer.mp4"></video>
         </div>
 
         <p id="story">
