--- a/contact.html
+++ b/contact.html
@@ -43,13 +43,16 @@
         </nav>
     </header>
 
+    <!--Présentation de l'équipe-->
     <section id="presentation" class="container">
         <h1>Rencontrez les créateurs du jeu</h1>
 
         <p>Ce jeu a été créé par une équipe de 5 élèves en tant que projet de Game et Level Design pour l'option 3D temps réel de la HELHA.</p>
         <hr>
     </section>
+    
 
+    <!--Présentation de l'équipe : section Art-->
     <section id="art" class="container">
 
         <h2>Les élèves de l'option art</h2>
@@ -69,6 +72,7 @@
         </div>
     </section>
 
+    <!--Présentation de l'équipe : section Prog-->
     <section id="prog" class="container">
 
         <h3>Les élèves de l'option programmation</h3>
@@ -83,6 +87,7 @@
         </div>
     </section>
     
+    <!--Formulaire-->
     <section id="formulaire" class="container">
         <hr>
 
@@ -96,8 +101,9 @@
         </form>
     </section>
 
+    <!-- Icone d'animation -->
     <section id="fantome">
-        <img src="img/ghost.png" alt="fantôme"> <!-- Icone de FontAwesome -->
+        <img src="img/ghost.png" alt="fantôme">
     </section>
 
     <footer> 
